welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: identifier expected but integer literal found.
  var a : Int =-50
                ^